
[package]
authors = ["Qiskit Development Team"]
edition = "2021"
name    = "mdx_link_extract"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
markdown    = "1.0.0"
napi        = "3.0.0"
napi-derive = "3.0.0"
serde       = { version = "1.0.228", features = ["derive"] }
serde_json  = "1.0.149"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
